fixed fixed sidebar overlapping detail view

--- a/src/app/beer-detail/beer-detail.component.less
+++ b/src/app/beer-detail/beer-detail.component.less
@@ -1,7 +1,7 @@
 @import "../../styles";
 
 .modal {
-  z-index: 3;
+  z-index: 11000;
   padding-top: 100px;
   padding-bottom: 100px;
   box-sizing: border-box;
